--- a/config/php.ini
+++ b/config/php.ini
@@ -1934,9 +1934,17 @@ ldap.max_links = -1
 ; XDEBUG
 
 zend_extension="/usr/lib/php5/20121212/xdebug.so"
-xdebug.remote_enable=1
-; xdebug.remote_handler=dbgp
-xdebug.remote_host=172.17.42.1
-xdebug.remote_connect_back=1
-xdebug.remote_port=9000
-xdebug.remote_log="/var/log/xdebug/xdebug.log"
+xdebug.remote_enable=On
+xdebug.remote_host=127.0.0.1
+xdebug.remote_autostart=Off
+xdebug.remote_connect_back=On
+xdebug.show_local_vars=1
+xdebug.remote_port=10000
+xdebug.idekey=netbeans-xdebug
+xdebug.profiler_enable=Off
+xdebug.remote_handler=dbgp
+xdebug.remote_mode=req
+xdebug.var_display_max_data = 2048
+xdebug.var_display_max_depth = 128
+xdebug.max_nesting_level = 500
+xdebug.remote_log=/tmp/xdebug.log
