Adicionada configuração de wildcard no apache para dominios .develop

--- a/config/sites-enabled.conf
+++ b/config/sites-enabled.conf
@@ -17,8 +17,8 @@ ServerName 127.0.0.1:80
 </VirtualHost>
 
 <VirtualHost *:80>
-  ServerName app.videointerativo.com
-  ServerAlias app.videointerativo.com
+  ServerName develop.videointerativo.com
+  ServerAlias develop.videointerativo.com
 
   DocumentRoot /var/www/laravel/public
 
@@ -32,3 +32,34 @@ ServerName 127.0.0.1:80
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
+
+<VirtualHost *:80>
+  ServerName develop.videointerativo.com
+  ServerAlias develop.videointerativo.com
+
+  DocumentRoot /var/www/laravel/public
+
+  <Directory /var/www/laravel/public>
+      AllowOverride All
+      Order allow,deny
+      Allow from all
+  </Directory>
+
+  ErrorLog ${APACHE_LOG_DIR}/error.log
+  CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+</VirtualHost>
+
+<Virtualhost *:80>
+    VirtualDocumentRoot "/var/www/%-2+/"
+    ServerName vhosts.develop
+    ServerAlias *.develop
+    UseCanonicalName Off
+    ErrorLog ${APACHE_LOG_DIR}/vhosts-error.log
+    <Directory "/var/www/*">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+</Virtualhost>
